Atualização de metodos hash e equals das entidades. Modificando contexto dos managedBean; Criando pesquisa e buscando lista dinâmica de coordenadas;

--- a/src/main/webapp/pages/cadastropeixe.xhtml
+++ b/src/main/webapp/pages/cadastropeixe.xhtml
@@ -16,8 +16,7 @@
 				<h:panelGrid id="cadastrar" columns="2" width="100%"
 					style="width: 50% !important;">
 					<p:outputLabel value="Nome: " />
-					<p:inputText id="nome" name="nome" size="60"
-						value="#{peixeMB.peixe.nome}" required="true"
+					<p:inputText id="nome" name="nome" size="60" value="#{peixeMB.peixe.nome}" required="true"
 						requiredMessage="Campo nome obrigatório!" />
 
 					<p:outputLabel value="Espécie " />
@@ -29,7 +28,7 @@
 
 
 					<p:outputLabel value="Peso Máximo: " />
-					<p:password id="pesoMax" value="#{peixeMB.peixe.pesoMax}" />
+					<p:inputText id="pesoMax" value="#{peixeMB.peixe.pesoMax}" />
 
 					<p:outputLabel value="Inicio Pesca: " />
 					<p:calendar id="inicioPesca" value="#{peixeMB.peixe.inicioPesca}"
@@ -44,9 +43,7 @@
 						required="true">
 					</p:calendar>
 
-
-					<p:commandButton action="#{peixeMB.salvar}" value="Salvar"
-						ajax="false" />
+					<p:commandButton action="#{peixeMB.salvar}" value="Salvar" ajax="false" />
 				</h:panelGrid>
 				<br />
 			</h:form>
