--- a/src/main/webapp/pages/cadastropesca.xhtml
+++ b/src/main/webapp/pages/cadastropesca.xhtml
@@ -15,7 +15,7 @@
 				<h:panelGrid header="Pesca" columns="1">
 					<h:panelGrid columns="2">
 						<h:outputLabel value="Usuario: " />
-<!-- 						<p:inputText id="usuario" name="usuario" size="60" value="#{pescaMB.pesca.usuario.nome}" required="true" /> -->
+						<p:inputText id="usuario" name="usuario" size="60" value="Natan" required="true" />
 
 						<h:outputLabel value="Ferramenta: " />
 						<p:selectOneMenu effect="fade" value="#{pescaMB.ferramenta}" id="selectFerramenta" converter="ferramentaConverter"	required="true">
