--- a/src/main/webapp/pages/pesquisaprincipal.xhtml
+++ b/src/main/webapp/pages/pesquisaprincipal.xhtml
@@ -11,14 +11,14 @@
 	<ui:define name="conteudo">
 		<h:body>
 			<h:form>
-				<p:growl id="growl" life="3000" />
+				<p:growl id="growl" life="3000" showDetail="true" sticky="true" />
 				<br /><br /><br />
 				<div align="center">
-				<p:gmap id="gmap" center="-27.658354, -48.599955" zoom="11"
-						type="HYBRID" style="width:100%;height:400px"
-						model="#{pesquisaPrincipalMB.circleModel}">
+				<p:gmap id="gmap" center="-27.658354, -48.599955" zoom="12"
+						type="HYBRID" style="width:800px;height:700px"
+						model="#{pesquisaPrincipalMB.circleModel}" >
 					
-					<p:ajax event="overlaySelect" listener="#{pesquisaPrincipalMB.onCircleSelect}" update="growl" />
+					<p:ajax event="overlaySelect" listener="#{pesquisaPrincipalMB.onCircleSelect}"    update="growl" />
 				</p:gmap>
 				</div>
 			</h:form>
