Ajustes nos projetos

--- a/src/main/webapp/pages/consultapesca.xhtml
+++ b/src/main/webapp/pages/consultapesca.xhtml
@@ -30,6 +30,10 @@
 					<p:column headerText="Duração">
 						<h:outputText value="#{pesca.duracao}" />
 					</p:column>
+			
+					<p:column headerText="Quantidade Pescarias">
+						<h:outputText value="#{pesca.pescarias.size()}" />
+					</p:column>
 				
 				</p:dataTable>
 				
