Alterando css da página cadastro de pesca

--- a/src/main/webapp/pages/cadastropesca.xhtml
+++ b/src/main/webapp/pages/cadastropesca.xhtml
@@ -14,12 +14,10 @@
 	
 	<ui:define name="conteudo">
 		<h:body>
-			<h:form id="form" styleClass="login-form">
+			<h:form id="form" styleClass="form-conteudo">
 				<p:messages id="mensagem" autoUpdate="true" />
 				
-				<div class="conteudo-page">
-					<div class="form">
-				
+				<div>
 						<h:panelGrid header="Pesca" columns="1">
 							<h:panelGrid columns="2">
 								<h:outputLabel value="Usuario: " />
@@ -111,7 +109,6 @@
 		
 						</h:panelGrid>
 					</div>		
-				</div>
 			</h:form>
 		</h:body>
 	</ui:define>
