--- a/src/main/webapp/pages/cadastropesca.xhtml
+++ b/src/main/webapp/pages/cadastropesca.xhtml
@@ -83,10 +83,8 @@
 							</p:column>
 							
 							<p:column >
-			                    <p:commandButton icon="ui-icon-trash"
-							                     title="Excluir esta pescaria"
-							                     actionListener="#{pescaMB.remove(pescaria)}"
-							                     ajax="true" update="tabelaPescarias" />
+			                    <p:commandButton icon="ui-icon-trash" title="Excluir esta pescaria"
+							                     actionListener="#{pescaMB.remove(pescaria)}" ajax="true" update="tabelaPescarias" />
 				            </p:column>
 							
 						</p:dataTable>
