--- a/src/main/webapp/pages/cadastropeixe.xhtml
+++ b/src/main/webapp/pages/cadastropeixe.xhtml
@@ -10,18 +10,16 @@
 
 	<ui:define name="conteudo">
 		<h:body>
-			<h:form id="formulario">
+			<h:form id="formulario"  styleClass="form-conteudo">
 				<p:messages id="messages" autoUpdate="true" />
 
-				<h:panelGrid id="cadastrar" columns="2" width="100%"
-					style="width: 50% !important;">
+				<h:panelGrid id="cadastrar" columns="2">
 					<p:outputLabel value="Nome: " />
 					<p:inputText id="nome" name="nome" size="60" value="#{peixeMB.peixe.nome}" required="true"
 						requiredMessage="Campo nome obrigatório!" />
 
 					<p:outputLabel value="Espécie " />
-					<p:inputText id="especie" value="#{peixeMB.peixe.especie}">
-					</p:inputText>
+					<p:inputText id="especie" value="#{peixeMB.peixe.especie}" />
 
 					<p:outputLabel value="Tamanho Máximo: " />
 					<p:inputText id="tamanhoMax" value="#{peixeMB.peixe.tamanhoMax}" />
@@ -32,20 +30,15 @@
 
 					<p:outputLabel value="Inicio Pesca: " />
 					<p:calendar id="inicioPesca" value="#{peixeMB.peixe.inicioPesca}"
-						showOn="button" popupIconOnly="false" pattern="dd/MM/yyyy"
-						locale="pt_BR" required="true">
-					</p:calendar>
+						showOn="button" popupIconOnly="false" pattern="dd/MM/yyyy" locale="pt_BR" required="true" />
 
 					<p:outputLabel value="Fim Pesca: " />
 					<p:calendar id="fimPesca" value="#{peixeMB.peixe.fimPesca}"
 						showOn="button" mindate="#{peixeMB.peixe.inicioPesca}"
-						popupIconOnly="false" pattern="dd/MM/yyyy" locale="pt_BR"
-						required="true">
-					</p:calendar>
+						popupIconOnly="false" pattern="dd/MM/yyyy" locale="pt_BR" required="true" />
 
 					<p:commandButton action="#{peixeMB.salvar}" value="Salvar" ajax="false" />
 				</h:panelGrid>
-				<br />
 			</h:form>
 		</h:body>
 	</ui:define>
